# OpenGLTestTemplate

./: CMakeLists.txt  README.md
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
shaders/: shader.vs
src/: CMakeLists.txt  main.cc
